fixed overflow-y

--- a/src/renderer/assets/style/standart.scss
+++ b/src/renderer/assets/style/standart.scss
@@ -6,7 +6,7 @@ html, body {
   margin: 0;
 }
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   background-color: #3A3A3A !important;
 }
